[package]
name = "zestors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3"
tokio = { version = "^1", features = ["full"] }
thiserror = "^1"
async-trait = "^0.1"
tiny-actor = { version = "^0.2.1", features = ["internals"] }
zestors-codegen = { path = "../zestors-codegen" }

[dev-dependencies]